arreglado titulo cambio de aceite

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Cambio de aceite de la moto</title>
+	<title>Cambio de aceite del motor</title>
 	<script type="text/javascript" src="script.js"></script>
 	<style type="text/css">
 		input[type="number"], input[type="button"] {
